[package]
name = "psylend-cpi"
version = "0.1.1"
description = "PsyLend CPI Examples. Borrow-lending protocol on Solana. View source at https://github.com/mithraiclabs/PsyLendCPIExamples."
edition = "2021"
readme = "../../README.md"
authors = ["PsyOptions <contact@psyoptions.io>"]
license = "AGPL-3.0-or-later"
keywords = ["psylend", "psyoptions", "psyfi", "solana", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "psylend_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2", features = ["dex"] }
bytemuck = { version = "1.7", features = ["derive"] }
psy-math = "1.0.0"

